Add openapi specification for prescriptions CRUD
